@@ -885,6 +885,13 @@ Example : exits\n\r\
 Short(s): ex\n\r\
 List the exits available to your character from the current room or area. 
 
+EXPERIENCE=\
+Command : EXPERIENCE\n\r\
+Usage   : EXPERIENCE\n\r\
+Example : experience\n\r\
+Short(s): exper, xp, exp\n\r\
+List the amount of experience earned, and the number of hours played. 
+
 FACTIONLIST=\
 Command : FACTIONLIST\n\r\
 Usage   : FACTIONLIST\n\r\
@@ -2247,6 +2254,13 @@ Usage   : WEATHER\n\r\
 Example : weather\n\r\
 Short(s): weath\n\r\
 Reminds you about the weather where you are.
+
+WEALTH=\
+Command : WEALTH\n\r\
+Usage   : WEALTH\n\r\
+Example : wealth\n\r\
+Short(s): \n\r\
+List the amount of money in your pocket.
 
 WEST=\
 Command : WEST\n\r\
