@@ -2222,5 +2222,6 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 24.Injury text is a bit more decorated now. (Thanks gmdenna!)
 25.Many many more mxp images scrounged up, and several old ones replaces with better ones.  There is a light at the end of the tunnel!
 # Build ? Release ?
-1. New Property: Prop_IceBox (thx Robert!)
+1. New Property (From 5.x snippets): Prop_IceBox (thx Robert!)
 2. CharStats can now be customized with EXTVAR_ in coffeemud.ini file.
+3. New Commands (From 4.x snippets): Experience, Wealth (thx again Robert)
